# OpenGL_Playground

./: CMakeLists.txt  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: Playground.cpp  Playground.hpp  main.cpp
